Bug 1137615 - Some icons are not displayed in the bookmarks sidebar. r=seth, a=sledru